backend/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moadong
spec:
  replicas: 1
