backend/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moadong-ingress
  annotations:
    cert-manager.io/issuer: cloudflare-issuer-staging
spec:
  tls:
    - hosts:
        - "zepelown.shop"
        - "*.zepelown.shop"
      secretName: zepelown-shop-tls-secret
  rules:
    - host: zepelown.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moadong-service
                port:
                  number: 8080
